Changes for 4.0.0alpha6

New features:
..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)

Bug fixes:
....I..... [ZBX-13350] added multiple Zabbix element default paths to output after running ./configure and --help option (dimir, viktors)
...G...PS. [ZBX-13509] improved compilation support from source for Solaris and NetBSD (MVekslers)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha5

New features:
..F....... [ZBXNEXT-4143] implemented submenu autofocus on top-level menu click (nikita)
..F....... [ZBXNEXT-4313] implemented keyboard interaction in context menus (miks)
A.F.I...S. [ZBXNEXT-4426] added option to execute cached passive checks at the current time (Ivo, wiper)
........S. [ZBXNEXT-4417] added real time export of events, history and trends in newline delimited JSON format (vso)
..F....... [ZBXNEXT-4374] implemented the widget configuration fields clearing when changing the type (ashubin)
A.F.I...S. [ZBXNEXT-4119] implemented tag based permissions (miks, Oleg, Sasha, Sergejs)
..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)

Bug fixes:
..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
........S. [ZBX-13613] improved a history syncer when backend elasticsearch is not available (MVekslers)
.......PS. [ZBX-13510] fixed error of execution "make dbschema" for NetBSD (MVekslers)
...G...... [ZBX-13544] fixed agent crashes when using regex with 'Log' item for Mac OSX (MVekslers)
........S. [ZBX-13611] fixed lld rules not always saving their state/error message changes (wiper)