@@ -1561,31 +1561,31 @@ button {
   background: #69808d url(../img/icon-sprite.svg) no-repeat -7px -439px; }
 
 .btn-widget-action {
-  background: url(../img/icon-sprite.svg) no-repeat -4px -616px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -618px; }
 
 .btn-widget-collapse {
-  background: url(../img/icon-sprite.svg) no-repeat -5px -652px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -654px; }
 
 .btn-widget-expand {
-  background: url(../img/icon-sprite.svg) no-repeat -5px -688px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -689px; }
 
 .btn-widget-edit {
-  background: url(../img/icon-sprite.svg) no-repeat -39px -617px; }
+  background: url(../img/icon-sprite.svg) no-repeat -42px -619px; }
 
 .btn-widget-delete {
-  background: url(../img/icon-sprite.svg) no-repeat -39px -580px; }
+  background: url(../img/icon-sprite.svg) no-repeat -42px -582px; }
 
 .btn-alarm-on {
-  background: url(../img/icon-sprite.svg) no-repeat -3px -545px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -546px; }
 
 .btn-alarm-off {
-  background: url(../img/icon-sprite.svg) no-repeat -3px -581px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -582px; }
 
 .btn-sound-on {
-  background: url(../img/icon-sprite.svg) no-repeat -3px -473px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -474px; }
 
 .btn-sound-off {
-  background: url(../img/icon-sprite.svg) no-repeat -3px -509px; }
+  background: url(../img/icon-sprite.svg) no-repeat -6px -510px; }
 
 .btn-dashbrd-conf {
   background: url(../img/icon-sprite.svg) no-repeat -42px -619px; }
@@ -1608,8 +1608,9 @@ button {
     filter: alpha(opacity=0); }
 
 .btn-widget-action, .btn-widget-collapse, .btn-widget-expand, .btn-widget-edit, .btn-widget-delete, .btn-alarm-on, .btn-alarm-off, .btn-sound-on, .btn-sound-off {
-  width: 30px;
-  height: 28px; }
+  width: 24px;
+  height: 24px;
+  margin: 2px 2px 0 0; }
 
 .btn-dashbrd-conf {
   width: 24px;
@@ -1625,10 +1626,6 @@ button {
   -webkit-transition: opacity 0.2s ease-out;
   -moz-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out; }
-  .btn-widget-action:focus, .btn-widget-collapse:focus, .btn-widget-expand:focus, .btn-widget-edit:focus, .btn-widget-delete:focus, .btn-alarm-on:focus, .btn-alarm-off:focus, .btn-sound-on:focus, .btn-sound-off:focus, .btn-dashbrd-conf:focus {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
 
 .btn-conf, .btn-kiosk, .btn-max, .btn-min, .btn-add-fav, .btn-remove-fav, .btn-action, .btn-info, .btn-reset, .icon-help, .icon-cal, .icon-wzrd-action, .drag-icon {
   width: 24px;
@@ -2369,7 +2366,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     .overlay-dialogue.modal > .overlay-close-btn {
       position: relative;
       float: right;
-      top: -12px;
+      top: -13px;
       right: -8px; }
   .overlay-dialogue.modal-popup {
     max-width: 1024px;
@@ -3605,6 +3602,11 @@ svg {
         border: 0px none;
         opacity: 0.5;
         float: left; }
+        .navtree .tree .tree-item > .tree-row > .tools .edit-item-btn::-moz-focus-inner,
+        .navtree .tree .tree-item > .tree-row > .tools .remove-item-btn::-moz-focus-inner,
+        .navtree .tree .tree-item > .tree-row > .tools .import-items-btn::-moz-focus-inner,
+        .navtree .tree .tree-item > .tree-row > .tools .add-child-btn::-moz-focus-inner {
+          padding: 0; }
       .navtree .tree .tree-item > .tree-row > .tools .edit-item-btn:hover,
       .navtree .tree .tree-item > .tree-row > .tools .remove-item-btn:hover,
       .navtree .tree .tree-item > .tree-row > .tools .import-items-btn:hover,
