@@ -181,15 +181,15 @@ $icon-btn: (
 }
 
 $icon-widget-btn: (
-	widget-action: url(../img/icon-sprite.svg) no-repeat -317px -616px,
-	widget-collapse: url(../img/icon-sprite.svg) no-repeat -315px -652px,
-	widget-expand: url(../img/icon-sprite.svg) no-repeat -315px -688px,
-	widget-edit: url(../img/icon-sprite.svg) no-repeat -351px -617px,
-	widget-delete: url(../img/icon-sprite.svg) no-repeat -351px -580px,
-	alarm-on: url(../img/icon-sprite.svg) no-repeat -315px -545px,
-	alarm-off: url(../img/icon-sprite.svg) no-repeat -315px -581px,
-	sound-on: url(../img/icon-sprite.svg) no-repeat -315px -473px,
-	sound-off: url(../img/icon-sprite.svg) no-repeat -315px -509px
+	widget-action: url(../img/icon-sprite.svg) no-repeat -318px -618px,
+	widget-collapse: url(../img/icon-sprite.svg) no-repeat -318px -654px,
+	widget-expand: url(../img/icon-sprite.svg) no-repeat -318px -690px,
+	widget-edit: url(../img/icon-sprite.svg) no-repeat -354px -619px,
+	widget-delete: url(../img/icon-sprite.svg) no-repeat -354px -582px,
+	alarm-on: url(../img/icon-sprite.svg) no-repeat -318px -546px,
+	alarm-off: url(../img/icon-sprite.svg) no-repeat -318px -582px,
+	sound-on: url(../img/icon-sprite.svg) no-repeat -318px -474px,
+	sound-off: url(../img/icon-sprite.svg) no-repeat -318px -510px
 );
 
 @each $icon-widget-btn, $bgimage in $icon-widget-btn {
@@ -917,8 +917,19 @@ td.disaster-bg {
 	content: none;
 }
 
-.notif-body li {
-	padding: 0 0 10px 42px;
+.notif-body {
+	h4 {
+		padding-bottom: 3px;
+		margin-bottom: -3px;
+	}
+
+	p {
+		margin: 0.25em 0 2px 0;
+	}
+
+	li {
+		padding: 0 0 10px 42px;
+	}
 }
 
 .notif-indic {
