@@ -161,15 +161,15 @@ $form-icon-btn: (
 }
 
 $icon-widget-btn: (
-	widget-action: url(../img/icon-sprite.svg) no-repeat -163px -616px,
-	widget-collapse: url(../img/icon-sprite.svg) no-repeat -163px -652px,
-	widget-expand: url(../img/icon-sprite.svg) no-repeat -163px -688px,
-	widget-edit: url(../img/icon-sprite.svg) no-repeat -198px -617px,
-	widget-delete: url(../img/icon-sprite.svg) no-repeat -198px -580px,
-	alarm-on: url(../img/icon-sprite.svg) no-repeat -163px -545px,
-	alarm-off: url(../img/icon-sprite.svg) no-repeat -163px -581px,
-	sound-on: url(../img/icon-sprite.svg) no-repeat -163px -473px,
-	sound-off: url(../img/icon-sprite.svg) no-repeat -163px -509px
+	widget-action: url(../img/icon-sprite.svg) no-repeat -165px -618px,
+	widget-collapse: url(../img/icon-sprite.svg) no-repeat -165px -654px,
+	widget-expand: url(../img/icon-sprite.svg) no-repeat -165px -690px,
+	widget-edit: url(../img/icon-sprite.svg) no-repeat -201px -619px,
+	widget-delete: url(../img/icon-sprite.svg) no-repeat -201px -582px,
+	alarm-on: url(../img/icon-sprite.svg) no-repeat -165px -546px,
+	alarm-off: url(../img/icon-sprite.svg) no-repeat -165px -582px,
+	sound-on: url(../img/icon-sprite.svg) no-repeat -165px -474px,
+	sound-off: url(../img/icon-sprite.svg) no-repeat -165px -510px
 );
 
 @each $icon-widget-btn, $bgimage in $icon-widget-btn {
@@ -195,7 +195,7 @@ $icon-widget-btn: (
 	background: url(../img/icon-sprite.svg) no-repeat -162px -7px !important;
 }
 .btn-dashbrd-conf {
-	background: url(../img/icon-sprite.svg) no-repeat -200px -619px !important;
+	background: url(../img/icon-sprite.svg) no-repeat -201px -619px !important;
 }
 
 .list-table {
@@ -885,8 +885,19 @@ td.disaster-bg {
 	content: none;
 }
 
-.notif-body li {
-	padding: 0 0 10px 42px;
+.notif-body {
+	h4 {
+		padding-bottom: 3px;
+		margin-bottom: -3px;
+	}
+
+	p {
+		margin: 0.25em 0 2px 0;
+	}
+
+	li {
+		padding: 0 0 10px 42px;
+	}
 }
 
 .notif-indic {
