@@ -4,6 +4,7 @@ New features:
 ..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)
 
 Bug fixes:
+..F....... [ZBX-13487] improved widgets menu icons focus state styles (Andzs)
 ....I..... [ZBX-13350] added multiple Zabbix element default paths to output after running ./configure and --help option (dimir, viktors)
 ...G...PS. [ZBX-13509] improved compilation support from source for Solaris and NetBSD (MVekslers)
 
